--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up Flutter
-      uses: subosito/flutter-action@v1.2.0
+      uses: cirrus-actions/flutter@v1.6.1
       with:
         flutter-version: '2.5.3'
 
