--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Set up Flutter
-      uses: cirrus-actions/flutter@v1.6.1
+      uses: subosito/flutter-action@v2.1.0
       with:
         flutter-version: '2.5.3'
 
